--- a/piot2012cascading/main.org
+++ b/piot2012cascading/main.org
@@ -194,7 +194,7 @@ $\Delta_X$ is the set of probability distributions over $X$. Let $\mu\in\Delta_X
 \end{equation}
 where the notation $E_{x\sim\mu}$ is the expectation with $x$ distributed according to $\mu$.
 
-Now, we introduce specific notations to the MDP paradigm. A (finite) MDP~\cite{puterman1994markov} is a tuple $M=\{S,A,P,\gamma,R\}$ where $S=\{s_i\}_{1\leq i \leq N}$ is the finite state space with $N\in\mathbb{N}^*$ states, $A=\{a_k\}_{1\leq k \leq K}$ is the finite action space with $K\in\mathbb{N}^*$ actions, $P=\{P_{s,a}\}_{(s,a)\in S\times A}$ is the set of transition probabilities where $P_{s,a}$ is a distribution probability over $S$. $P$ represents the dynamics of the MDP and the notation $p(s,a,s')=P_{s,a}(s')$ quantifies the probability to reach $s'\in S$ knowing that the action $a \in A$ was taken in the state $s\in S$, $\gamma\in]0,1[$ is the discount factor and $R$ is a function from $S\times A$ to $\mathbb{R}$ called the reward function. A deterministic policy $\pi$ is a function from $S$ to $A$, the value function $V^\pi_R$ is a function from $S$ to $\mathbb{R}$ defined by:
+Now, we introduce specific notations to the MDP paradigm. A (finite) MDP \cite{puterman1994markov} is a tuple $M=\{S,A,P,\gamma,R\}$ where $S=\{s_i\}_{1\leq i \leq N}$ is the finite state space with $N\in\mathbb{N}^*$ states, $A=\{a_k\}_{1\leq k \leq K}$ is the finite action space with $K\in\mathbb{N}^*$ actions, $P=\{P_{s,a}\}_{(s,a)\in S\times A}$ is the set of transition probabilities where $P_{s,a}$ is a distribution probability over $S$. $P$ represents the dynamics of the MDP and the notation $p(s,a,s')=P_{s,a}(s')$ quantifies the probability to reach $s'\in S$ knowing that the action $a \in A$ was taken in the state $s\in S$, $\gamma\in]0,1[$ is the discount factor and $R$ is a function from $S\times A$ to $\mathbb{R}$ called the reward function. A deterministic policy $\pi$ is a function from $S$ to $A$, the value function $V^\pi_R$ is a function from $S$ to $\mathbb{R}$ defined by:
 \begin{equation}
 V^\pi_R(s)=E^\pi_s[\sum_{t=0}^{+\infty}\gamma^tR(s_t,\pi(s_t))], \forall s \in S,
 \end{equation}
@@ -229,7 +229,7 @@ representation), that the model ($P$ and $R$) may be unknown (the only informati
 to some behavioral policy), that learning can occurs in an online or off-line setting, and so on. There exists books on the subject \cite{bertsekas2001dynamic},\cite{sutton1998reinforcement}.
 
 In the classical IRL paradigm \cite{ng2000algorithms}, an MDP without reward $M\backslash R =\{S,A,P,\gamma\}$ and a policy $\pi_E$ called expert-policy are given and the problem is to find
-a reward $R^*$ for which the policy $\pi_E$ is optimal. However this problem is clearly ill-posed in the sense that there is not uniqueness of the reward $R^*$ : many rewards functions are equivalent in the sense that they have the same optimal deterministic policies \cite{ng1999policyreward}, moreover the trivial zero-reward is a solution for any deterministic policy $\pi_E$ as it is shown in\~{}\cite{ng2000algorithms}. In the literature, some solutions are proposed in order to respond to the ill-posed nature of the problem \cite{ng2000algorithms},\cite{ziebart2008maximum},\cite{boularias2011relative}.
+a reward $R^*$ for which the policy $\pi_E$ is optimal. However this problem is clearly ill-posed in the sense that there is not uniqueness of the reward $R^*$ : many rewards functions are equivalent in the sense that they have the same optimal deterministic policies \cite{ng1999policyreward}, moreover the trivial zero-reward is a solution for any deterministic policy $\pi_E$ as it is shown in \cite{ng2000algorithms}. In the literature, some solutions are proposed in order to respond to the ill-posed nature of the problem \cite{ng2000algorithms,ziebart2008maximum,boularias2011relative}.
 In our experiments, see Section \ref{section: experiments}, we assume that the solely available information is provided by transitions sampled according to the dynamics of the environnement under $\pi_E$:
 \begin{equation}
 \{(s_i,a_i=\pi_E(s_i)),s_i')\}_{1\leq i \leq D}, D\in\mathbb{N}^*,
@@ -237,67 +237,12 @@ In our experiments, see Section \ref{section: experiments}, we assume that the s
 where $s_i'$ is sampled according to the distribution $P_{s_i,a_i}$.
 The reward function is obviously unknown, but this assumption means that the dynamics ($P$) is only known through transitions $(s_i, a_i, s_i')$ and that the
 policy $\pi_E$ is only known through state-action pairs $(s_i, a_i)$.\\
-For a given deterministic policy $\pi$, a component $P_{s_i,\pi(s_i)}(s_j)$ of the matrix $P_\pi$ represents the probability to transit from $s_i$ to $s_j$ under the policy $\pi$. So $P_\pi$ can be seen as a transition matrix of a finite Markov-chain on the finite state space $S$. If $P_\pi$ is irreducible then it exists a unique distribution $\mu_\pi$ (see~\cite{baldi2000martingales}) called the stationary distribution such that:
+For a given deterministic policy $\pi$, a component $P_{s_i,\pi(s_i)}(s_j)$ of the matrix $P_\pi$ represents the probability to transit from $s_i$ to $s_j$ under the policy $\pi$. So $P_\pi$ can be seen as a transition matrix of a finite Markov-chain on the finite state space $S$. If $P_\pi$ is irreducible then it exists a unique distribution $\mu_\pi$ (see \cite{baldi2000martingales}) called the stationary distribution such that:
 \begin{equation}
 \label{equation: stationarity}
 \mu_\pi=\mu_\pi^T P_\pi.
 \end{equation}
 \label{section: background}
-First, we introduce some general notations. Let $X=\{x_i\}_{1\leq i \leq I}$ be a finite set of $I\in\mathbb{N}^*$ elements, a function $g\in\mathbb{R}^X$ can also be seen as the real column vector $g=[g(i)=g(x_i)]_{1\leq i \leq I}$, $g^T$ is the transposition of $g$, and $|g|=[|g|(i)=|g(i)|]_{1\leq i \leq I}$.
-$\Delta_X$ is the set of probability distributions over $X$. Let $\mu\in\Delta_X$ and $f\in\mathbb{R}^X$, we define the $\mu$-weighted $l_1$-norm:
-\begin{equation}
-\|f\|_{\mu,1}=\sum_{x\in X}\mu(x)|f(x)|=E_{x\sim\mu}[|f(x)|]=\mu^T|f|,
-\end{equation}
-where the notation $E_{x\sim\mu}$ is the expectation with $x$ distributed according to $\mu$.
-
-Now, we introduce specific notations to the MDP paradigm. A (finite) MDP~\cite{puterman1994markov} is a tuple $M=\{S,A,P,\gamma,R\}$ where $S=\{s_i\}_{1\leq i \leq N}$ is the finite state space with $N\in\mathbb{N}^*$ states, $A=\{a_k\}_{1\leq k \leq K}$ is the finite action space with $K\in\mathbb{N}^*$ actions, $P=\{P_{s,a}\}_{(s,a)\in S\times A}$ is the set of transition probabilities where $P_{s,a}$ is a distribution probability over $S$. $P$ represents the dynamics of the MDP and the notation $p(s,a,s')=P_{s,a}(s')$ quantifies the probability to reach $s'\in S$ knowing that the action $a \in A$ was taken in the state $s\in S$, $\gamma\in]0,1[$ is the discount factor and $R$ is a function from $S\times A$ to $\mathbb{R}$ called the reward function. A deterministic policy $\pi$ is a function from $S$ to $A$, the value function $V^\pi_R$ is a function from $S$ to $\mathbb{R}$ defined by:
-\begin{equation}
-V^\pi_R(s)=E^\pi_s[\sum_{t=0}^{+\infty}\gamma^tR(s_t,\pi(s_t))], \forall s \in S,
-\end{equation}
-where $E^\pi_s$ is the expectation over the distribution of the trajectories $(s_0,s_1,\dots)$ obtained by executing the policy $\pi$ starting from $s_0=s$.
-The action-value function $Q^\pi_R$ is a function from $S\times A$ to $R$ defined by:
-\begin{equation}
-\forall s\in S, \forall a\in A, Q^{\pi}_R(s,a)=R(s,a)+\gamma\sum_{s'\in S}P_{s,a}(s')V^{\pi}_R(s').
-\end{equation}
-The classical result for finite MDPs is the well-known Bellman equation \cite{sutton1998reinforcement}:
-\begin{equation}
-\label{equation: Bellman}
-\forall s\in S, V^{\pi}_R(s)=R(s,\pi(s))+\gamma\sum_{s'\in S}P_{s,\pi(s)}(s')V^{\pi}_R(s'),.
-\end{equation}
-A policy $\pi$ is said optimal for the reward $R$ when:
-\begin{equation}
-\label{equation:Voptimal}
-\forall s\in S, \forall \tilde{\pi}\in A^{S}, V^{\pi}_R(s)\geq V^{\tilde{\pi}}_R(s).
-\end{equation}
-Another classical result called the Bellman optimality is: $\pi$ is an optimal policy for the reward $R$ if and only if:
-\begin{equation}
-\label{equation:Qoptimal}
-\forall s\in S, \pi(s)\in\argmax_{a\in A} Q^\pi_R(s,a).
-\end{equation}
-For a finite-MDP $M=\{S,A,P,\gamma,R\}$, the existence of an optimal policy for any function $R$ is shown in \cite{bertsekas2001dynamic}.
-For a given policy $\pi$ and a given reward function $R$, we define $R_\pi=[R_\pi(i)=R(s_i,\pi(s_i))]_{1\leq i \leq N}$, the $N\times N$-matrix $P_\pi=[P_\pi(i,j)=p(s_i,\pi(s_i),s_j]_{1\leq i,j \leq N}$ and the Bellman operator $T^\pi_R$ which is a function from $\mathbb{R}^S$ to $\mathbb{R}^S$:
-\begin{equation}
-\forall V\in\mathbb{R}^S, T^\pi_RV=R_\pi+\gamma P_\pi V.
-\end{equation}
-It is well known that the unique fixed point of the operator $T^\pi_R$ is  $V^\pi_R$ \cite{puterman1994markov}.\\
-RL consists in finding an optimal policy for the reward function $R$. Notice that the state space may be too large for an exact representation of the value function (which calls for approximate
-representation), that the model ($P$ and $R$) may be unknown (the only information being provided through rewarded transitions sampled according
-to some behavioral policy), that learning can occurs in an online or off-line setting, and so on. There exists books on the subject \cite{bertsekas2001dynamic},\cite{sutton1998reinforcement}.
-
-In the classical IRL paradigm \cite{ng2000algorithms}, an MDP without reward $M\backslash R =\{S,A,P,\gamma\}$ and a policy $\pi_E$ called expert-policy are given and the problem is to find
-a reward $R^*$ for which the policy $\pi_E$ is optimal. However this problem is clearly ill-posed in the sense that there is not uniqueness of the reward $R^*$ : many rewards functions are equivalent in the sense that they have the same optimal deterministic policies \cite{ng1999policyreward}, moreover the trivial zero-reward is a solution for any deterministic policy $\pi_E$ as it is shown in\~{}\cite{ng2000algorithms}. In the literature, some solutions are proposed in order to respond to the ill-posed nature of the problem \cite{ng2000algorithms},\cite{ziebart2008maximum},\cite{boularias2011relative}.
-In our experiments, see Section \ref{section: experiments}, we assume that the solely available information is provided by transitions sampled according to the dynamics of the environnement under $\pi_E$:
-\begin{equation}
-\{(s_i,a_i=\pi_E(s_i)),s_i')\}_{1\leq i \leq D}, D\in\mathbb{N}^*,
-\end{equation}
-where $s_i'$ is sampled according to the distribution $P_{s_i,a_i}$.
-The reward function is obviously unknown, but this assumption means that the dynamics ($P$) is only known through transitions $(s_i, a_i, s_i')$ and that the
-policy $\pi_E$ is only known through state-action pairs $(s_i, a_i)$.\\
-For a given deterministic policy $\pi$, a component $P_{s_i,\pi(s_i)}(s_j)$ of the matrix $P_\pi$ represents the probability to transit from $s_i$ to $s_j$ under the policy $\pi$. So $P_\pi$ can be seen as a transition matrix of a finite Markov-chain on the finite state space $S$. If $P_\pi$ is irreducible then it exists a unique distribution $\mu_\pi$ (see~\cite{baldi2000martingales}) called the stationary distribution such that:
-\begin{equation}
-\label{equation: stationarity}
-\mu_\pi=\mu_\pi^T P_\pi.
-\end{equation}
 * Cascading Classification and Regression for IRL
 \label{section: Cascading}
 #Probleme sur les refs
@@ -382,7 +327,7 @@ One can notice that the classification error is defined thanks to the expectatio
 \end{equation}
 Then one can suppose that our data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated independently thanks to $\mu_E$ but this assumption is quite strong and non-realistic.
 However it is often the case that the data provided by the expert are trajectories. In that case ,if $P_{\pi_E}$ is irreducible , the rate of convergence of the data distribution
-to the stationary distribution is at least exponential (this is the Doeblin theorem see~\cite{baldi2000martingales}). It allows us to suppose that the data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated under $\mu_E$.
+to the stationary distribution is at least exponential (this is the Doeblin theorem see \cite{baldi2000martingales}). It allows us to suppose that the data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated under $\mu_E$.
 \end{remark}
 Finally, we introduce also the first order discounted future state distribution concentration coefficient (\cite{MunosSIAM07}):
 \begin{equation}
@@ -555,7 +500,7 @@ One can notice that the classification error is defined thanks to the expectatio
 \end{equation}
 Then one can suppose that our data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated independently thanks to $\mu_E$ but this assumption is quite strong and non-realistic.
 However it is often the case that the data provided by the expert are trajectories. In that case ,if $P_{\pi_E}$ is irreducible , the rate of convergence of the data distribution
-to the stationary distribution is at least exponential (this is the Doeblin theorem see~\cite{baldi2000martingales}). It allows us to suppose that the data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated under $\mu_E$.
+to the stationary distribution is at least exponential (this is the Doeblin theorem see \cite{baldi2000martingales}). It allows us to suppose that the data $\{s_i,a_i=\pi_E(s_i)\}_{1\leq i \leq D}$ are generated under $\mu_E$.
 \end{remark}
 Finally, we introduce also the first order discounted future state distribution concentration coefficient (\cite{MunosSIAM07}):
 \begin{equation}
